minor tweak. fixed indentation

--- a/sopa.html
+++ b/sopa.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Slides - SOPA</title>
+    <title>Slides - SOPA
+</title>
     <meta content="developer student html5 css3 obj-c java" name="keywords" />
     <link href="http://fonts.googleapis.com/css?family=Lilita+One|Lora:400italic" rel="stylesheet" />
 	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -15,43 +16,51 @@
   <body class="clearfix sopa">
     <div class="impress-not-supported" id="impress">
 		<div class="step" data-scale="4" data-x="-1000" data-y="-1500" id="date-blackout">
-		  <h1 class="blue" id="jan-18">January 18</h1>
-		  <h1 class="blue" id="twenty-twelve">2012</h1>
-		  <h1 class="chunky" id="black">Black</h1>
-		  <h1 class="chunky" id="out">Out</h1>
+		  <h1 class="blue" id="jan-18">January 18</h1>
+		  <h1 class="green" id="twenty-twelve">2012</h1>
+		  <h1 class="chunky" id="black">Black</h1>
+		  <h1 class="chunky" id="out">Out</h1>
 		</div>
 		<div class="step" data-rotate="-90" data-x="-1000" data-y="-500" id="freakout">
 		  <img class="photo" src="img/blackout-meme.jpg" />
 		</div>
 		<div class="step" data-rotate="-90" data-x="-600" data-y="-500" id="largest">
 		  <h1>
-			<span class="chunky">Largest</span><br /><span class="blue">Online Protest</span><br /><span class="chunky">In History</span>
+			<span class="chunky">Largest</span>
+			<br />
+			<span class="blue">Online Protest</span>
+			<br />
+			<span class="chunky">In History</span>
 		  </h1>
 		</div>
 		<div class="step" data-rotate="90" data-x="0" data-y="-1500" id="social-media">
 		  <div>
-			<h2>Social</h2>
-			<h2 class="chunky">Media</h2>
+			<h2>Social</h2>
+			<h2 class="chunky">Media</h2>
 		  </div>
 		</div>
 		<div class="step" data-rotate="-90" data-x="0" data-y="-500" id="sopa">
-		  <h1 class="chunky green">Stop Online Piracy Act</h1>
+		  <h1 class="chunky green">Stop Online Piracy Act</h1>
 		</div>
 		<div class="step" data-scale="0.02" data-x="0" data-y="-230" id="sopa-description">
 		  <ul>
-			<li>Expansion of law enforcement</li>
-			<li>Court orders to search engines for removal of sites from results</li>
-			<li>Internet Service Providers (ISPs) must block sites</li>
+			<li>Expansion of law enforcement</li>
+			<li>Court orders to search engines for removal of sites from results</li>
+			<li>Internet Service Providers (ISPs) must block sites</li>
 		  </ul>
 		</div>
 		<div class="step" data-rotate="-90" data-x="150" data-y="-500" id="pipa">
-		  <h1 class="blue">Protect Intellectual<br />Property Act</h1>
+			<h1 class="blue">
+			  	Protect Intellectual
+				<br />
+				Property Act
+			</h1>
 		</div>
 		<div class="step" data-scale="0.04" data-x="120" data-y="-145" id="pipa-description">
 		  <ul>
 			<li>PIPA<span class="equal">=</span>SOPA</li>
-			<li>Deals with out-of-country websites</li>
-			<li>Allows websites to be taken down without due process of law</li>
+			<li>Deals with out-of-country websites</li>
+			<li>Allows websites to be taken down without due process of law</li>
 		  </ul>
 		</div>
 		<div class="step" data-x="1000" data-y="-1500" id="bieber">
@@ -59,33 +68,34 @@
 		</div>
 		<div class="step" data-x="1000" data-y="-1500" id="bieber-crossout"></div>
 		<div class="step" data-rotate="-90" data-x="750" data-y="-500" id="blackout">
-		  <h1>Blackout</h1>
+		  <h1>Blackout</h1>
 		  <img class="photo" src="img/wikipedia-blackout.png" />
 		</div>
 		<div class="step" data-rotate="-90" data-x="1500" data-y="-500" id="reddit-godaddy">
-		  <h1 class="blue">Reddit vs. Go Daddy</h1>
-		  <h2 class="green chunky">Reddit</h2>
+		  <h1 class="blue">Reddit vs. Go Daddy</h1>
+		  <h2 class="green chunky">Reddit</h2>
 		  <ul>
-			<li>"Front Page of the Internet"</li>
-			<li>Online community for sharing links and discussing current events</li>
+			<li>"Front Page of the Internet"</li>
+			<li>Online community for sharing links and discussing current events</li>
 		  </ul>
-		  <h2 class="green chunky">Go Daddy</h2>
+		  <h2 class="green chunky">Go Daddy</h2>
 		  <ul>
-			<li>Web Hosting</li>
-			<li>Domain Registrar</li>
-			<li>Publicly supported SOPA</li>
+			<li>Web Hosting</li>
+			<li>Domain Registrar</li>
+			<li>Publicly supported SOPA</li>
 		  </ul>
 		</div>
 		<div class="step" data-rotate="-90" data-x="2250" data-y="-500" id="reddit-godaddy-2">
-		  <h2 class="green chunky">December 25th, 2011:</h2>
-		  <h1 class="blue" id="domains-lost">16,191</h1>
-		  <h2 class="chunky">domains transferred</h2>
-		  <blockquote>"Go Daddy will support it when and if the Internet community supports it."</blockquote>
+		  <h2 class="green chunky">December 25th, 2011:</h2>
+		  <h1 class="blue" id="domains-lost">16,191</h1>
+		  <h2 class="chunky">domains transferred</h2>
+		  <blockquote>"Go Daddy will support it when and if the Internet community supports it."</blockquote>
 		</div>
 		<div class="step" data-x="2000" data-y="-1500" id="results">
-		  <h1 class="blue">Results</h1>
+		  <h1 class="blue">Results</h1>
 		  <figure class="photo">
-			<img src="img/blackout-results.png" /><figcaption>Graphic from <a href="http://sopastrike.com">sopastrike.com</a></figcaption>
+			<img src="img/blackout-results.png" />
+			<figcaption>Graphic from <a href="http://sopastrike.com">sopastrike.com</a></figcaption>
 		  </figure>
 		</div>
 		<div class="step" data-scale="5" data-x="500" data-y="-600" id="overview"></div>
